--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Fitness Tracker</string>
     <string name="label_imc">IMC</string>
+    <string name="imc_desc">IMC é a sigla para índice de Massa Corporal que serve para avaliar o peso do indíviduo em relação à sual altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso desejado.\n\nPreenchas campos de peso e altura para descobrir o seu IMC</string>
+    <string name="weight">Peso (Kg)</string>
+    <string name="height">Altura (cm)</string>
+    <string name="calc">calcular</string>
 </resources>
